--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint --fix"
   },
   "devDependencies": {
-    "nuxt": "3.1.1",
+    "nuxt": "latest",
     "@mannesmaikel/tsconfig": "workspace:*",
     "@mannesmaikel/ui": "workspace:*"
   }
