--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,7 @@
     "@vue/test-utils": "^2.2.9",
     "c8": "^7.12.0",
     "jsdom": "^20.0.3",
+    "sass": "^1.58.3",
     "vitest": "^0.28.3"
   }
 }
