refactor: changed eslint-custom-config to config

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "turbo run test"
   },
   "devDependencies": {
-    "@mannesmaikel/eslint-config-custom": "workspace:*",
+    "@mannesmaikel/config": "workspace:*",
     "turbo": "latest"
   },
   "engines": {
